# action-gh-release

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.js  .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  action.yml  automation.yml  check-out.yml  codeq l-analysis.yml  jest.config.ts  package-lock.json  package.json  release build.yml  release.sh  releasepackage  tags.yml  tsconfig.json  upload-release.yml  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-dist.yml  codeql-analysis.yml  main.yml  setupnpm-gulp.yml
__tests__/: github.test.ts  util.test.ts
lib/: github.js  main.js  util.js
src/: github.rs  github.ts  index.ts  main.rs  main.ts  util.ts
src/interfaces/: configInterface.ts  index.ts  releaseAssetInterface.ts  releaseInterface.ts  releaserInterface.ts
tests/data/foo/: bar.txt
